--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,7 @@
 name: type_resolver
 description: >
   TypeResolver provides Type and String with the ability to ultimately resolve to an instance or Type.version: 1.0.0
+version: 0.1.1
 homepage: https://github.com/dart-ecosystem/type_resolver.dart
 author: Copydog <775150@qq.com>
 
@@ -11,7 +12,7 @@ dependencies:
   build: ^1.2.2
   source_gen: ^0.9.4+6
   glob: ^1.2.0
-  analyzer: ^0.39.1
+  analyzer: ^0.39.0
   exporter: ^0.1.0
 dev_dependencies:
   pedantic: ^1.7.0
