--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
   build: ^1.2.2
   source_gen: ^0.9.4+6
   glob: ^1.2.0
-  analyzer: ^0.39.0
+  analyzer: '>=0.36.0 <0.39.0'
   exporter: ^0.1.0
 dev_dependencies:
   pedantic: ^1.7.0
